{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 330,
  "lineage": "f2ce71ef-4b86-49b5-2f05-89c621b92a04",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bccda171061b3b5c",
            "arn": "arn:aws:ec2:ap-northeast-1:626614672806:elastic-ip/eipalloc-0bccda171061b3b5c",
            "association_id": "eipassoc-09fa9a99b6ddfccdb",
            "domain": "vpc",
            "id": "eipalloc-0bccda171061b3b5c",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-07d00ef90edda74e4",
            "private_dns": "ip-10-1-0-21.ap-northeast-1.compute.internal",
            "private_ip": "10.1.0.21",
            "public_dns": "ec2-54-65-207-101.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.65.207.101",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "MegaTicket-DR-NAT-EIP"
            },
            "tags_all": {
              "Environment": "test-DR",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-DR-NAT-EIP",
              "Project": "MegaTicket"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:626614672806:internet-gateway/igw-0ebb615474bbc5817",
            "id": "igw-0ebb615474bbc5817",
            "owner_id": "626614672806",
            "tags": {
              "Name": "MegaTicket-DR-IGW"
            },
            "tags_all": {
              "Environment": "test-DR",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-DR-IGW",
              "Project": "MegaTicket"
            },
            "vpc_id": "vpc-05a716c5ee53cba93"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:626614672806:loadbalancer/app/MegaTicket-DR-ALB/850b9a3769975416",
            "arn_suffix": "app/MegaTicket-DR-ALB/850b9a3769975416",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "MegaTicket-DR-ALB-415477994.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:626614672806:loadbalancer/app/MegaTicket-DR-ALB/850b9a3769975416",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "MegaTicket-DR-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0bf4a6c8dd5500fff"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-075865f6d781e68f2"
              },
              {
                "subnet_id": "subnet-0f41f1adfdbc32dc2"
              }
            ],
            "subnets": [
              "subnet-075865f6d781e68f2",
              "subnet-0f41f1adfdbc32dc2"
            ],
            "tags": {
              "Name": "MegaTicket-DR-ALB"
            },
            "tags_all": {
              "Environment": "test-DR",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-DR-ALB",
              "Project": "MegaTicket"
            },
            "vpc_id": "vpc-05a716c5ee53cba93",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_c",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:626614672806:loadbalancer/net/MegaTicket-DR-NLB/59dd1f5b58c57269",
            "arn_suffix": "net/MegaTicket-DR-NLB/59dd1f5b58c57269",
            "dns_name": "MegaTicket-DR-NLB-59dd1f5b58c57269.elb.ap-northeast-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:626614672806:loadbalancer/net/MegaTicket-DR-NLB/59dd1f5b58c57269",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "MegaTicket-DR-NLB",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03d8408e49d75609c"
              },
              {
                "subnet_id": "subnet-0c9e18a2a46d21235"
              }
            ],
            "subnets": [
              "subnet-03d8408e49d75609c",
              "subnet-0c9e18a2a46d21235"
            ],
            "tags": {
              "Name": "MegaTicket-DR-NLB"
            },
            "tags_all": {
              "Environment": "test-DR",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-DR-NLB",
              "Project": "MegaTicket"
            },
            "vpc_id": "vpc-05a716c5ee53cba93",
            "zone_id": "Z31USIVHYNEOWT"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private_a",
            "aws_subnet.private_c",
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:626614672806:listener/app/MegaTicket-DR-ALB/850b9a3769975416/1e386c009bbd4db1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:626614672806:listener/app/MegaTicket-DR-ALB/850b9a3769975416/1e386c009bbd4db1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:626614672806:loadbalancer/app/MegaTicket-DR-ALB/850b9a3769975416",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "test-DR",
              "ManagedBy": "Terraform",
              "Project": "MegaTicket"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.dr",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_c",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:626614672806:listener/app/MegaTicket-DR-ALB/850b9a3769975416/e690cec44b4d0d0d",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:626614672806:certificate/905b28cd-070c-4661-b3ce-c5a98d7047ab",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:626614672806:targetgroup/MegaTicket-DR-Web-TG/2270c5bfe64620f2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:626614672806:listener/app/MegaTicket-DR-ALB/850b9a3769975416/e690cec44b4d0d0d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:626614672806:loadbalancer/app/MegaTicket-DR-ALB/850b9a3769975416",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {
              "Environment": "test-DR",
              "ManagedBy": "Terraform",
              "Project": "MegaTicket"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.dr",
            "aws_lb_target_group.web",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_c",
            "aws_vpc.dr",
            "data.aws_acm_certificate.issued"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:626614672806:listener/net/MegaTicket-DR-NLB/59dd1f5b58c57269/e815b7cc8eb11760",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:626614672806:targetgroup/MegaTicket-DR-App-NLB-TG/9581b8eaf8af5c7e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:626614672806:listener/net/MegaTicket-DR-NLB/59dd1f5b58c57269/e815b7cc8eb11760",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:626614672806:loadbalancer/net/MegaTicket-DR-NLB/59dd1f5b58c57269",
            "mutual_authentication": [],
            "port": 3001,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "test-DR",
              "ManagedBy": "Terraform",
              "Project": "MegaTicket"
            },
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.nlb",
            "aws_lb_target_group.app_nlb",
            "aws_subnet.private_a",
            "aws_subnet.private_c",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:626614672806:targetgroup/MegaTicket-DR-App-NLB-TG/9581b8eaf8af5c7e",
            "arn_suffix": "targetgroup/MegaTicket-DR-App-NLB-TG/9581b8eaf8af5c7e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:626614672806:targetgroup/MegaTicket-DR-App-NLB-TG/9581b8eaf8af5c7e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:626614672806:loadbalancer/net/MegaTicket-DR-NLB/59dd1f5b58c57269"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "MegaTicket-DR-App-NLB-TG",
            "port": 3001,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "MegaTicket-DR-App-NLB-TG"
            },
            "tags_all": {
              "Environment": "test-DR",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-DR-App-NLB-TG",
              "Project": "MegaTicket"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05a716c5ee53cba93"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:626614672806:targetgroup/MegaTicket-DR-Web-TG/2270c5bfe64620f2",
            "arn_suffix": "targetgroup/MegaTicket-DR-Web-TG/2270c5bfe64620f2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:626614672806:targetgroup/MegaTicket-DR-Web-TG/2270c5bfe64620f2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:626614672806:loadbalancer/app/MegaTicket-DR-ALB/850b9a3769975416"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "MegaTicket-DR-Web-TG",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "MegaTicket-DR-Web-TG"
            },
            "tags_all": {
              "Environment": "test-DR",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-DR-Web-TG",
              "Project": "MegaTicket"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05a716c5ee53cba93"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bccda171061b3b5c",
            "association_id": "eipassoc-09fa9a99b6ddfccdb",
            "connectivity_type": "public",
            "id": "nat-0a53e3ac9565a280e",
            "network_interface_id": "eni-07d00ef90edda74e4",
            "private_ip": "10.1.0.21",
            "public_ip": "54.65.207.101",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f41f1adfdbc32dc2",
            "tags": {
              "Name": "MegaTicket-DR-NAT-GW"
            },
            "tags_all": {
              "Environment": "test-DR",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-DR-NAT-GW",
              "Project": "MegaTicket"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dr",
            "aws_subnet.public_a",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:626614672806:route-table/rtb-0eb3eda78747d2d96",
            "id": "rtb-0eb3eda78747d2d96",
            "owner_id": "626614672806",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a53e3ac9565a280e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MegaTicket-DR-Private-RT"
            },
            "tags_all": {
              "Environment": "test-DR",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-DR-Private-RT",
              "Project": "MegaTicket"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a716c5ee53cba93"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dr",
            "aws_nat_gateway.dr",
            "aws_subnet.public_a",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:626614672806:route-table/rtb-0ed99545760b3d2d0",
            "id": "rtb-0ed99545760b3d2d0",
            "owner_id": "626614672806",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ebb615474bbc5817",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MegaTicket-DR-Public-RT"
            },
            "tags_all": {
              "Environment": "test-DR",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-DR-Public-RT",
              "Project": "MegaTicket"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a716c5ee53cba93"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.dr",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6beed658835b775",
            "route_table_id": "rtb-0eb3eda78747d2d96",
            "subnet_id": "subnet-03d8408e49d75609c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dr",
            "aws_nat_gateway.dr",
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c7ac37f0bcfbc4c",
            "route_table_id": "rtb-0eb3eda78747d2d96",
            "subnet_id": "subnet-0c9e18a2a46d21235"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dr",
            "aws_nat_gateway.dr",
            "aws_route_table.private",
            "aws_subnet.private_c",
            "aws_subnet.public_a",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013867b2bbc378fb7",
            "route_table_id": "rtb-0ed99545760b3d2d0",
            "subnet_id": "subnet-0f41f1adfdbc32dc2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.dr",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08669bacf4b590d6c",
            "route_table_id": "rtb-0ed99545760b3d2d0",
            "subnet_id": "subnet-075865f6d781e68f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.dr",
            "aws_route_table.public",
            "aws_subnet.public_c",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:626614672806:security-group/sg-0bf4a6c8dd5500fff",
            "description": "Security group for DR Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf4a6c8dd5500fff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "MegaTicket-DR-ALB-SG",
            "name_prefix": "",
            "owner_id": "626614672806",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MegaTicket-DR-ALB-SG"
            },
            "tags_all": {
              "Environment": "test-DR",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-DR-ALB-SG",
              "Project": "MegaTicket"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a716c5ee53cba93"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:626614672806:security-group/sg-052ada7517fff2ecf",
            "description": "Security group for DR App instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052ada7517fff2ecf",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "API Port from NLB (VPC CIDR)",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [],
                "description": "API Port from ALB",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bf4a6c8dd5500fff"
                ],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [],
                "description": "API Port from Web instances",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0609e882f845c7a75"
                ],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "MegaTicket-DR-App-SG",
            "name_prefix": "",
            "owner_id": "626614672806",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MegaTicket-DR-App-SG"
            },
            "tags_all": {
              "Environment": "test-DR",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-DR-App-SG",
              "Project": "MegaTicket"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a716c5ee53cba93"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.web",
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:626614672806:security-group/sg-0609e882f845c7a75",
            "description": "Security group for DR Web instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0609e882f845c7a75",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Web Port from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bf4a6c8dd5500fff"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "MegaTicket-DR-Web-SG",
            "name_prefix": "",
            "owner_id": "626614672806",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MegaTicket-DR-Web-SG"
            },
            "tags_all": {
              "Environment": "test-DR",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-DR-Web-SG",
              "Project": "MegaTicket"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a716c5ee53cba93"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:626614672806:subnet/subnet-03d8408e49d75609c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d8408e49d75609c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "626614672806",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MegaTicket-DR-Private-Subnet-A",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "test-DR",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-DR-Private-Subnet-A",
              "Project": "MegaTicket",
              "Type": "Private"
            },
            "vpc_id": "vpc-05a716c5ee53cba93"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:626614672806:subnet/subnet-0c9e18a2a46d21235",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9e18a2a46d21235",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "626614672806",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MegaTicket-DR-Private-Subnet-C",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "test-DR",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-DR-Private-Subnet-C",
              "Project": "MegaTicket",
              "Type": "Private"
            },
            "vpc_id": "vpc-05a716c5ee53cba93"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:626614672806:subnet/subnet-0f41f1adfdbc32dc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f41f1adfdbc32dc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "626614672806",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MegaTicket-DR-Public-Subnet-A",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "test-DR",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-DR-Public-Subnet-A",
              "Project": "MegaTicket",
              "Type": "Public"
            },
            "vpc_id": "vpc-05a716c5ee53cba93"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:626614672806:subnet/subnet-075865f6d781e68f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075865f6d781e68f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "626614672806",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MegaTicket-DR-Public-Subnet-C",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "test-DR",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-DR-Public-Subnet-C",
              "Project": "MegaTicket",
              "Type": "Public"
            },
            "vpc_id": "vpc-05a716c5ee53cba93"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:626614672806:vpc/vpc-05a716c5ee53cba93",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-078589837e15a5682",
            "default_route_table_id": "rtb-06d3640e6cbb9ce6c",
            "default_security_group_id": "sg-00d1685dc62c3587c",
            "dhcp_options_id": "dopt-07c7dbe5c8e358caa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05a716c5ee53cba93",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06d3640e6cbb9ce6c",
            "owner_id": "626614672806",
            "tags": {
              "Name": "MegaTicket-DR-VPC"
            },
            "tags_all": {
              "Environment": "test-DR",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-DR-VPC",
              "Project": "MegaTicket"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:626614672806:vpc-endpoint/vpce-072f3fb32de2efa1a",
            "cidr_blocks": [
              "52.94.8.0/24",
              "13.248.69.0/24",
              "13.248.70.0/24",
              "35.71.114.0/25",
              "35.71.114.128/26"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-072f3fb32de2efa1a",
            "ip_address_type": "ipv4",
            "owner_id": "626614672806",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0eb3eda78747d2d96"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.dynamodb",
            "service_region": "ap-northeast-1",
            "state": "available",
            "tags": {
              "Name": "MegaTicket-DR-DynamoDB-Endpoint"
            },
            "tags_all": {
              "Environment": "test-DR",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-DR-DynamoDB-Endpoint",
              "Project": "MegaTicket"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-05a716c5ee53cba93"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.dr",
            "aws_nat_gateway.dr",
            "aws_route_table.private",
            "aws_subnet.public_a",
            "aws_vpc.dr"
          ]
        }
      ]
    }
  ]
}